--- a/microservicecloud-eureka-7001/src/main/resources/application.yml
+++ b/microservicecloud-eureka-7001/src/main/resources/application.yml
@@ -8,7 +8,7 @@ eureka:
   client: 
     register-with-eureka: false     #false表示不向注册中心注册自己。
     fetch-registry: false     #false表示自己端就是注册中心，我的职责就是维护服务实例，并不需要去检索服务
-    service-url:      #此地址与Eureka Server交互的地址查询服务和注册服务，要访问页面直接localost:7001
+    service-url:      #此地址与Eureka Server交互的地址查询服务和注册服务，要访问页面直接localhost:7001
        defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/       #设置与Eureka Server交互的地址查询服务和注册服务都需要依赖这个地址（单机）。
 
       
